# Salix

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Directory.Build.props  LICENSE.txt  Monosand.sln  Readme.en.md  Readme.md  design.md  global.json
Monosand/: AssemblyInfo.cs  Compatibility.cs  Game.cs  Interop.cs  KeyboardState.cs  Monosand.csproj  MonosandPlatform.cs  Platform.cs  RenderContext.cs  ResourceLoader.cs  SR.cs  ThrowHelper.cs  WeakDictionary.cs  WinImpl.cs  Window.MessageLoop.cs  Window.cs  WindowImpl.cs
Monosand.EC/: ECGame.cs  Entity.cs  Monosand.EC.csproj  SR.cs  Scene.cs
Monosand.UnitTest/: ColorTests.cs  Monosand.UnitTest.csproj
Monosand.Win32/: AssemblyInfo.cs  GraphicsImplBase.cs  Interop.cs  Monosand.Win32.csproj  OperationFailedException.cs  Win32GraphicsImplBase.cs  Win32Platform.cs  Win32RenderContext.cs  Win32RenderTargetImpl.cs  Win32ShaderImpl.cs  Win32Texture2DImpl.cs  Win32VertexBufferImpl.cs  Win32WinImpl.cs
Monosand.Win32.Native/: Monosand.Win32.Native.vcxproj  Monosand.Win32.Native.vcxproj.filters  enums.h  exports.h  exports_common.cpp  exports_graphics.cpp  exports_graphics.h  exports_msgloop.cpp  gl_debug_callback.cpp  key_map.h  pch.h  whandle.h  win32_msg_loop.cpp
Monosand.Win32.Native/glad/: glad.c  glad.h
Monosand.Win32/Impls/: Win32GraphicsImplBase.cs  Win32RenderTargetImpl.cs  Win32ShaderImpl.cs  Win32Texture2DImpl.cs  Win32VertexBufferImpl.cs
Monosand/Audio/: AudioContext.cs  AudioData.cs  AudioFormat.cs  Sound.cs  SoundInstance.cs
Monosand/Embedded/: SpriteShader.frag  SpriteShader.vert  TextShader.frag
Monosand/Exception/: ErrorCode.cs  ErrorCodeException.cs  FrameworkException.cs  MResult.cs  OperationFailedException.cs  SR.cs  ThrowHelper.cs
Monosand/Graphics/: Color.KnownColor.cs  Color.cs  DrawTransform.cs  Effect.cs  GraphicsBackend.cs  GraphicsResource.cs  IShaderImpl.cs  ITexture2DImpl.cs  ImageFormat.cs  RenderContext.cs  RenderContextState.cs  Shader.cs  ShaderImpl.cs  ShaderParameter.cs  SpriteBatch.cs  SpriteEffect.cs  SpriteFont.cs  SpriteShader.cs  Texture2D.cs  Texture2DImpl.cs  TextureFilterType.cs  TextureWrapType.cs  VertexAttributeFormat.cs  VertexBuffer.cs  VertexBufferDataUsage.cs  VertexBufferImpl.cs  VertexDeclaration.cs  VertexElementType.cs  VertexPositionColorTexture.cs
Monosand/Graphics/Impl/: IGraphicsImpl.cs  IRenderTargetImpl.cs  IShaderImpl.cs  ITexture2DImpl.cs  IVertexBufferImpl.cs
Monosand/Graphics/Resource/: GraphicsResource.cs  RenderTarget.cs  Sampler.cs  Shader.cs  Texture2D.cs  VertexBuffer.cs
Monosand/Graphics/Vertex/: IVertexBufferImpl.cs  PrimitiveType.cs  VertexBuffer.cs  VertexElementType.cs  VertexPosition2DColorTexture.cs  VertexPosition2DTexture.cs  VertexPositionColorTexture.cs  VertexPositionTexture.cs
Monosand/Input/: CursorState.cs  Key.cs  KeyboardState.cs  MouseButton.cs  MouseState.cs  PointerButton.cs  PointerState.cs
Monosand/Interops/: Interop.Audio.cs  Interop.Common.cs  Interop.Graphics.cs  Interop.Resource.cs  Interop.Windowing.cs
Monosand/Platform/: MonosandPlatform.cs  Platform.cs
Monosand/Primitives/: Color.KnownColor.cs  Color.cs  MathHelper.cs  RectangleProp.cs  RectangleProperty.cs  TriangleProperty.cs  UnmanagedMemory.cs  UnmanagedMemoryChunk.cs  UnmangedMemory.cs
Monosand/Resource/: FileSystemResourceManager.cs  ResourceLoadFailedException.cs  ResourceLoader.cs  ResourceManager.cs  ResourceType.cs
Monosand/Utility/: WeakDictionary.cs
Test.Win32/: MyGame.cs  MyScene.cs  MyShader.frag  MyShader.vert  Program.cs  Test.Win32.csproj  TestEntity.cs  TestPlatform.cs  TestPlayer.cs  run_notes.md  test.frag  test.vert  test.vsh
Test.Win32/Content/: MyShader.frag
Test.Win32/Properties/: launchSettings.json
Test.Win32/TestAssets/: MyShader.frag
TextAtlasMaker/: Program.cs  TextAtlasMaker.csproj
libmsd/: CMakeLists.txt  build_all_windows.bat  build_vs_test_winx64.bat  make_build_dir.bat
libmsd/source/: common.h  enums.h  enums_graphics.h  exports.h  exports_audio.cpp  exports_common.cpp  exports_graphics.cpp  exports_msgloop.cpp  gl_debug_callback.cpp  graphics.cpp  key_map.h  pch.h  windowing.cpp  windowing_msgloop.cpp
msd/: CMakeLists.txt  build_all_windows.bat  build_winx64_forvstest.bat  build_winx64_mingw.bat
msd/source/: common.cpp  common.h  error_code.h  gl_debug_callback.cpp  graphics.cpp  graphics_enums.h  initializations.h  resource_loading.cpp  windowing.cpp  windowing.h  windowing_msgloop.cpp
source/: Directory.Build.props  Salix.sln
source/Salix/: AssemblyInfo.cs  Compatibility.cs  Game.cs  GlobalUsings.cs  Interop.cs  Interops.cs  Interops.tt  Salix.csproj
source/Salix.EC/: ECGame.cs  Entity.cs  SR.cs  Salix.EC.csproj  Scene.cs
source/Salix.Native/: CMakeLists.txt  build_all_windows.bat  build_winx64_mingw.bat  build_winx64_vs.bat  clean_builds.bat
source/Salix.Native/source/: api_error.cpp  api_error.h  api_graphics.cpp  api_graphics.h  api_render_context.cpp  api_render_context.h  api_resource.cpp  api_resource.h  api_system.cpp  api_system.h  api_windowing.cpp  api_windowing.h  api_windowing_msgloop.cpp  common.h  error.cpp  error.h  graphics_enums.h  keyboard.h
source/Salix.Test.Win/: MyGame.cs  MyScene.cs  Program.cs  Salix.Test.Win.csproj  TestPlatform.cs  TestPlayer.cs
source/Salix.Test.Windows/: Program.cs  Salix.Test.Windows.csproj
source/Salix.Test.Windows/BasicEC/: MyGame.cs  MyScene.cs  TestPlatform.cs  TestPlayer.cs
source/Salix.Test.Windows/BasicTest/: MyGame.cs  Program.cs
source/Salix.Test.Windows/Content/: MyShader.frag  MyShader.vert
source/Salix.Test.Windows/Properties/: launchSettings.json
source/Salix.Test.Windows/SyncTest/: MyGame.cs
source/Salix.UnitTest/: ColorTests.cs  Salix.UnitTest.csproj
source/Salix.Windows/: Salix.Windows.csproj
source/Salix/Embedded/: SpriteShader.frag
source/Salix/Exception/: ErrorCode.cs  FrameworkException.cs  SR.cs  ThrowHelper.cs
source/TextAtlasMaker/: TextAtlasMaker.csproj
(+51 files in other folders)
